register user duplicate account name detect.

--- a/Forum.Repositories/Forum.Repository.csproj
+++ b/Forum.Repositories/Forum.Repository.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="AccountRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DuplicateAccountNameException.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Forum.Domain\Forum.Domain.csproj">
