Refact forum code.

--- a/Forum.Repositories/Forum.Repository.csproj
+++ b/Forum.Repositories/Forum.Repository.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountRepository.cs" />
+    <Compile Include="MongoAccountRegistrationInfoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DuplicateAccountNameException.cs" />
   </ItemGroup>
