--- a/Forum.QueryService/Forum.Query.csproj
+++ b/Forum.QueryService/Forum.Query.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5A4055C3-89BC-4149-8A6D-06CE985080C9}</ProjectGuid>
+    <ProjectGuid>{FDF791C3-0AAA-4E06-8DD6-3130B79739E2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Forum.Domain</RootNamespace>
-    <AssemblyName>Forum.Domain</AssemblyName>
+    <RootNamespace>Forum.Query</RootNamespace>
+    <AssemblyName>Forum.Query</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ENode, Version=1.2.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="ENode">
       <HintPath>..\packages\enode.1.2.6\lib\net40\ENode.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -40,22 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Events\PostCreated.cs" />
-    <Compile Include="Events\PostBodyChanged.cs" />
-    <Compile Include="Events\SectionCreated.cs" />
-    <Compile Include="Events\SectionNameChanged.cs" />
-    <Compile Include="Events\AccountCreated.cs" />
-    <Compile Include="Repositories\IAccountRegistrationInfoRepository.cs" />
-    <Compile Include="Model\Account\AccountRegistrationStatus.cs" />
-    <Compile Include="Model\Account\AccountRegistrationInfo.cs" />
-    <Compile Include="Model\Post.cs" />
-    <Compile Include="Model\PostInfo.cs" />
-    <Compile Include="Model\Assert.cs" />
+    <Compile Include="QueryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\Account\Account.cs" />
-    <Compile Include="Model\Section.cs" />
-    <Compile Include="Services\IAccountService.cs" />
-    <Compile Include="Services\AccountService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
