--- a/Forum.ProcessManagers/Forum.ProcessManagers.csproj
+++ b/Forum.ProcessManagers/Forum.ProcessManagers.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A1F0CFC7-D08F-4B0B-A2EF-9C466903BC5C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Forum.CommandRouters</RootNamespace>
-    <AssemblyName>Forum.CommandRouters</AssemblyName>
+    <RootNamespace>Forum.ProcessManagers</RootNamespace>
+    <AssemblyName>Forum.ProcessManagers</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
