--- a/Forum.Web/Forum.Web.csproj
+++ b/Forum.Web/Forum.Web.csproj
@@ -342,9 +342,9 @@
       <Project>{985e2001-f607-44bf-a84b-31e9b7d89d0c}</Project>
       <Name>Forum.CommandHandlers</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Forum.CommandRouters\Forum.CommandRouters.csproj">
+    <ProjectReference Include="..\Forum.ProcessManagers\Forum.ProcessManagers.csproj">
       <Project>{a1f0cfc7-d08f-4b0b-a2ef-9c466903bc5c}</Project>
-      <Name>Forum.CommandRouters</Name>
+      <Name>Forum.ProcessManagers</Name>
     </ProjectReference>
     <ProjectReference Include="..\Forum.Denormalizers.Dapper\Forum.Denormalizers.Dapper.csproj">
       <Project>{433dd072-0748-4440-ba1b-4a0d6e507d3b}</Project>
