--- a/Forum.Api/packages.config
+++ b/Forum.Api/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.1.1" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="EntityFramework.zh-Hans" version="5.0.0" targetFramework="net40" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
