--- a/Forum.Api/Forum.Api.csproj
+++ b/Forum.Api/Forum.Api.csproj
@@ -44,10 +44,28 @@
     <Reference Include="Autofac">
       <HintPath>..\packages\Autofac.3.1.1\lib\net40\Autofac.dll</HintPath>
     </Reference>
-    <Reference Include="Autofac.Integration.WebApi">
+    <Reference Include="Autofac.Integration.WebApi, Version=3.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Autofac.WebApi.3.1.0\lib\net40\Autofac.Integration.WebApi.dll</HintPath>
     </Reference>
+    <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="ServiceStack.Common">
+      <HintPath>..\packages\ServiceStack.Common.3.9.56\lib\net35\ServiceStack.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Interfaces">
+      <HintPath>..\packages\ServiceStack.Common.3.9.56\lib\net35\ServiceStack.Interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Redis, Version=3.9.51.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ServiceStack.Redis.3.9.57\lib\net35\ServiceStack.Redis.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Text">
+      <HintPath>..\packages\ServiceStack.Text.3.9.56\lib\net35\ServiceStack.Text.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
@@ -136,6 +154,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PostsController.cs" />
+    <Compile Include="Extensions\ConfigurationExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -257,9 +276,57 @@
       <Project>{b4258b15-71b1-4b3b-960a-6a1c75ca2004}</Project>
       <Name>ENode.Autofac</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ENodeFramework\Extensions\ENode.JsonNet\ENode.JsonNet.csproj">
+      <Project>{92b95148-23f9-4aa8-b5dd-fcbde0e0eb88}</Project>
+      <Name>ENode.JsonNet</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ENodeFramework\Extensions\ENode.Log4Net\ENode.Log4Net.csproj">
       <Project>{0f063898-fb02-47d9-b6c6-7a4cfe4b6c51}</Project>
       <Name>ENode.Log4Net</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ENodeFramework\Extensions\ENode.Mongo\ENode.Mongo.csproj">
+      <Project>{25dda9f0-dc61-4446-9364-b29376215155}</Project>
+      <Name>ENode.Mongo</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ENodeFramework\Extensions\ENode.Redis\ENode.Redis.csproj">
+      <Project>{6c201374-2f02-4134-8098-9d7d8dfce31a}</Project>
+      <Name>ENode.Redis</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.CommandHandlers\Forum.CommandHandlers.csproj">
+      <Project>{985e2001-f607-44bf-a84b-31e9b7d89d0c}</Project>
+      <Name>Forum.CommandHandlers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Commands\Forum.Commands.csproj">
+      <Project>{7787ec6c-9cf3-401c-803a-b4da2b0ca9ef}</Project>
+      <Name>Forum.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Denormalizers.Dapper\Forum.Denormalizers.Dapper.csproj">
+      <Project>{433dd072-0748-4440-ba1b-4a0d6e507d3b}</Project>
+      <Name>Forum.Denormalizers.Dapper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Domain.Repositories.MongoDB\Forum.Domain.Repositories.MongoDB.csproj">
+      <Project>{f53755fd-a603-4d08-abab-b766d20deb3b}</Project>
+      <Name>Forum.Domain.Repositories.MongoDB</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Domain\Forum.Domain.csproj">
+      <Project>{5a4055c3-89bc-4149-8a6d-06ce985080c9}</Project>
+      <Name>Forum.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.EventHandlers\Forum.EventHandlers.csproj">
+      <Project>{ad486a96-f0e6-4b26-9ae5-54ae78080f38}</Project>
+      <Name>Forum.EventHandlers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Events\Forum.Events.csproj">
+      <Project>{20fea974-92f2-4147-a597-7e88dc1562db}</Project>
+      <Name>Forum.Events</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Infrastructure\Forum.Infrastructure.csproj">
+      <Project>{86985782-8588-48da-81ab-ffd3b855c73c}</Project>
+      <Name>Forum.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.ProcessManagers\Forum.ProcessManagers.csproj">
+      <Project>{a1f0cfc7-d08f-4b0b-a2ef-9c466903bc5c}</Project>
+      <Name>Forum.ProcessManagers</Name>
     </ProjectReference>
     <ProjectReference Include="..\Forum.QueryServices.Dapper\Forum.QueryServices.Dapper.csproj">
       <Project>{228e2c43-cd92-4b49-817d-3fbfbb9c50c4}</Project>
