--- a/ENodeFramework/Extensions/ENode.Mongo/ENode.Mongo.csproj
+++ b/ENodeFramework/Extensions/ENode.Mongo/ENode.Mongo.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>ENode.Mongo</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
