--- a/ENodeFramework/Extensions/ENode.Redis/ENode.Redis.csproj
+++ b/ENodeFramework/Extensions/ENode.Redis/ENode.Redis.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>ENode.Redis</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -53,7 +53,9 @@
   <ItemGroup>
     <Compile Include="ConfigurationExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedisEventStore.cs" />
     <Compile Include="RedisMemoryCache.cs" />
+    <Compile Include="RedisBinarySerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\eNode\ENode.csproj">
