--- a/Forum.CommandHandlers/Forum.Application.CommandHandlers.csproj
+++ b/Forum.CommandHandlers/Forum.Application.CommandHandlers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{228E2C43-CD92-4B49-817D-3FBFBB9C50C4}</ProjectGuid>
+    <ProjectGuid>{985E2001-F607-44BF-A84B-31E9B7D89D0C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Forum.QueryServices.Dapper</RootNamespace>
-    <AssemblyName>Forum.QueryServices.Dapper</AssemblyName>
+    <RootNamespace>Forum.CommandHandlers</RootNamespace>
+    <AssemblyName>Forum.CommandHandlers</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -44,14 +44,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseQueryService.cs" />
-    <Compile Include="PostQueryService.cs" />
+    <Compile Include="AccountCommandHandler.cs" />
+    <Compile Include="PostCommandHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReplyCommandHandler.cs" />
+    <Compile Include="SectionCommandHandler.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Forum.QueryServices\Forum.QueryServices.csproj">
-      <Project>{a0bc4ae4-1cab-4cbf-9bfb-5365f04c60ce}</Project>
-      <Name>Forum.QueryServices</Name>
+    <ProjectReference Include="..\Forum.Commands\Forum.Application.Commands.csproj">
+      <Project>{7787ec6c-9cf3-401c-803a-b4da2b0ca9ef}</Project>
+      <Name>Forum.Application.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Domain\Forum.Domain.Model.csproj">
+      <Project>{5a4055c3-89bc-4149-8a6d-06ce985080c9}</Project>
+      <Name>Forum.Domain.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
