--- a/Forum.Denormalizers.Dapper/Forum.Infrastructure.Denormalizers.Dapper.csproj
+++ b/Forum.Denormalizers.Dapper/Forum.Infrastructure.Denormalizers.Dapper.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{985E2001-F607-44BF-A84B-31E9B7D89D0C}</ProjectGuid>
+    <ProjectGuid>{433DD072-0748-4440-BA1B-4A0D6E507D3B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Forum.CommandHandlers</RootNamespace>
-    <AssemblyName>Forum.CommandHandlers</AssemblyName>
+    <RootNamespace>Forum.Denormalizers.Dapper</RootNamespace>
+    <AssemblyName>Forum.Denormalizers.Dapper</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -44,20 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountCommandHandler.cs" />
-    <Compile Include="PostCommandHandler.cs" />
+    <Compile Include="SectionEventHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReplyCommandHandler.cs" />
-    <Compile Include="SectionCommandHandler.cs" />
+    <Compile Include="BaseEventHandler.cs" />
+    <Compile Include="AccountEventHandler.cs" />
+    <Compile Include="PostEventHandler.cs" />
+    <Compile Include="ReplyEventHandler.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Forum.Commands\Forum.Commands.csproj">
-      <Project>{7787ec6c-9cf3-401c-803a-b4da2b0ca9ef}</Project>
-      <Name>Forum.Commands</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Forum.Domain\Forum.Domain.csproj">
-      <Project>{5a4055c3-89bc-4149-8a6d-06ce985080c9}</Project>
-      <Name>Forum.Domain</Name>
+    <ProjectReference Include="..\Forum.Events\Forum.Domain.Events.csproj">
+      <Project>{20fea974-92f2-4147-a597-7e88dc1562db}</Project>
+      <Name>Forum.Domain.Events</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
