--- a/Forum.Domain.Repositories.MongoDB/Forum.Infrastructure.Repositories.MongoDB.csproj
+++ b/Forum.Domain.Repositories.MongoDB/Forum.Infrastructure.Repositories.MongoDB.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5A4055C3-89BC-4149-8A6D-06CE985080C9}</ProjectGuid>
+    <ProjectGuid>{F53755FD-A603-4D08-ABAB-B766D20DEB3B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Forum.Domain</RootNamespace>
-    <AssemblyName>Forum.Domain</AssemblyName>
+    <RootNamespace>Forum.Domain.Repositories.MongoDB</RootNamespace>
+    <AssemblyName>Forum.Domain.Repositories.MongoDB</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -38,34 +38,29 @@
     <Reference Include="ENode">
       <HintPath>..\packages\enode.2.1.3\lib\net40\ENode.dll</HintPath>
     </Reference>
+    <Reference Include="MongoDB.Bson">
+      <HintPath>..\packages\mongocsharpdriver.1.8.2\lib\net35\MongoDB.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver">
+      <HintPath>..\packages\mongocsharpdriver.1.8.2\lib\net35\MongoDB.Driver.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Posts\Post.cs" />
-    <Compile Include="DomainException.cs" />
-    <Compile Include="Replies\Reply.cs" />
-    <Compile Include="Accounts\DuplicateAccountNameException.cs" />
-    <Compile Include="Accounts\IAccountRegistrationInfoRepository.cs" />
-    <Compile Include="Accounts\AccountRegistrationStatus.cs" />
-    <Compile Include="Accounts\AccountRegistrationInfo.cs" />
-    <Compile Include="Assert.cs" />
+    <Compile Include="AccountRegistrationInfoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Accounts\Account.cs" />
-    <Compile Include="Sections\Section.cs" />
-    <Compile Include="Accounts\IAccountService.cs" />
-    <Compile Include="Accounts\AccountService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Forum.Events\Forum.Events.csproj">
-      <Project>{20fea974-92f2-4147-a597-7e88dc1562db}</Project>
-      <Name>Forum.Events</Name>
+    <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Forum.Domain\Forum.Domain.Model.csproj">
+      <Project>{5a4055c3-89bc-4149-8a6d-06ce985080c9}</Project>
+      <Name>Forum.Domain.Model</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
