--- a/Forum.QueryServices.Dapper/Forum.Infrastructure.QueryServices.Dapper.csproj
+++ b/Forum.QueryServices.Dapper/Forum.Infrastructure.QueryServices.Dapper.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{433DD072-0748-4440-BA1B-4A0D6E507D3B}</ProjectGuid>
+    <ProjectGuid>{228E2C43-CD92-4B49-817D-3FBFBB9C50C4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Forum.Denormalizers.Dapper</RootNamespace>
-    <AssemblyName>Forum.Denormalizers.Dapper</AssemblyName>
+    <RootNamespace>Forum.QueryServices.Dapper</RootNamespace>
+    <AssemblyName>Forum.QueryServices.Dapper</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -44,17 +44,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SectionEventHandler.cs" />
+    <Compile Include="BaseQueryService.cs" />
+    <Compile Include="PostQueryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BaseEventHandler.cs" />
-    <Compile Include="AccountEventHandler.cs" />
-    <Compile Include="PostEventHandler.cs" />
-    <Compile Include="ReplyEventHandler.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Forum.Events\Forum.Events.csproj">
-      <Project>{20fea974-92f2-4147-a597-7e88dc1562db}</Project>
-      <Name>Forum.Events</Name>
+    <ProjectReference Include="..\Forum.QueryServices\Forum.Application.QueryServices.csproj">
+      <Project>{a0bc4ae4-1cab-4cbf-9bfb-5365f04c60ce}</Project>
+      <Name>Forum.Application.QueryServices</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
