--- a/Forum.Commands/Forum.Commands.csproj
+++ b/Forum.Commands/Forum.Commands.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5A4055C3-89BC-4149-8A6D-06CE985080C9}</ProjectGuid>
+    <ProjectGuid>{7787EC6C-9CF3-401C-803A-B4DA2B0CA9EF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Forum.Domain</RootNamespace>
-    <AssemblyName>Forum.Domain</AssemblyName>
+    <RootNamespace>Forum.Commands</RootNamespace>
+    <AssemblyName>Forum.Commands</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -44,15 +44,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DomainException.cs" />
-    <Compile Include="Assert.cs" />
+    <Compile Include="Accounts\CreateAccountCommand.cs" />
+    <Compile Include="Posts\UpdatePostCommand.cs" />
+    <Compile Include="Posts\CreatePostCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Forum.Events\Forum.Domain.csproj">
-      <Project>{20fea974-92f2-4147-a597-7e88dc1562db}</Project>
-      <Name>Forum.Domain</Name>
-    </ProjectReference>
+    <Compile Include="Replies\UpdateReplyBodyCommand.cs" />
+    <Compile Include="Replies\CreateReplyCommand.cs" />
+    <Compile Include="Sections\UpdateSectionCommand.cs" />
+    <Compile Include="Sections\CreateSectionCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
