--- a/Forum.Domain.Tests/Forum.Domain.Tests.csproj
+++ b/Forum.Domain.Tests/Forum.Domain.Tests.csproj
@@ -71,25 +71,9 @@
     <Compile Include="ReplyTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Forum.CommandHandlers\Forum.Application.CommandHandlers.csproj">
-      <Project>{985e2001-f607-44bf-a84b-31e9b7d89d0c}</Project>
-      <Name>Forum.CommandHandlers</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Forum.Commands\Forum.Application.Commands.csproj">
-      <Project>{7787ec6c-9cf3-401c-803a-b4da2b0ca9ef}</Project>
-      <Name>Forum.Commands</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Forum.Denormalizers.Dapper\Forum.Infrastructure.Denormalizers.Dapper.csproj">
-      <Project>{433dd072-0748-4440-ba1b-4a0d6e507d3b}</Project>
-      <Name>Forum.Denormalizers.Dapper</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Forum.Domain\Forum.Domain.Model.csproj">
-      <Project>{5a4055c3-89bc-4149-8a6d-06ce985080c9}</Project>
-      <Name>Forum.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Forum.Events\Forum.Domain.Events.csproj">
+    <ProjectReference Include="..\Forum.Events\Forum.Domain.csproj">
       <Project>{20fea974-92f2-4147-a597-7e88dc1562db}</Project>
-      <Name>Forum.Events</Name>
+      <Name>Forum.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
