--- a/Forum.QueryServices.Dapper/Forum.QueryServices.Dapper.csproj
+++ b/Forum.QueryServices.Dapper/Forum.QueryServices.Dapper.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5A4055C3-89BC-4149-8A6D-06CE985080C9}</ProjectGuid>
+    <ProjectGuid>{228E2C43-CD92-4B49-817D-3FBFBB9C50C4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Forum.Domain</RootNamespace>
-    <AssemblyName>Forum.Domain</AssemblyName>
+    <RootNamespace>Forum.QueryServices.Dapper</RootNamespace>
+    <AssemblyName>Forum.QueryServices.Dapper</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -44,18 +44,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DomainException.cs" />
-    <Compile Include="Assert.cs" />
+    <Compile Include="BaseQueryService.cs" />
+    <Compile Include="PostQueryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Forum.Events\Forum.Domain.csproj">
-      <Project>{20fea974-92f2-4147-a597-7e88dc1562db}</Project>
-      <Name>Forum.Domain</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\Forum.QueryServices\Forum.QueryServices.csproj">
+      <Project>{a0bc4ae4-1cab-4cbf-9bfb-5365f04c60ce}</Project>
+      <Name>Forum.QueryServices</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
