--- a/Forum.QueryServices/Forum.QueryServices.csproj
+++ b/Forum.QueryServices/Forum.QueryServices.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5A4055C3-89BC-4149-8A6D-06CE985080C9}</ProjectGuid>
+    <ProjectGuid>{A0BC4AE4-1CAB-4CBF-9BFB-5365F04C60CE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Forum.Domain</RootNamespace>
-    <AssemblyName>Forum.Domain</AssemblyName>
+    <RootNamespace>Forum.QueryServices</RootNamespace>
+    <AssemblyName>Forum.QueryServices</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -44,8 +44,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DomainException.cs" />
-    <Compile Include="Assert.cs" />
+    <Compile Include="AccountService.cs" />
+    <Compile Include="DTOs\Post.cs" />
+    <Compile Include="DTOs\PostInfo.cs" />
+    <Compile Include="DTOs\PostQueryOption.cs" />
+    <Compile Include="DTOs\ReplyInfo.cs" />
+    <Compile Include="DTOs\PageInfo.cs" />
+    <Compile Include="IAccountService.cs" />
+    <Compile Include="IPostQueryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
