--- a/Forum.CommandHandlers/Forum.CommandHandlers.csproj
+++ b/Forum.CommandHandlers/Forum.CommandHandlers.csproj
@@ -55,8 +55,8 @@
       <Project>{7787ec6c-9cf3-401c-803a-b4da2b0ca9ef}</Project>
       <Name>Forum.Commands</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Forum.Events\Forum.Domain.csproj">
-      <Project>{20fea974-92f2-4147-a597-7e88dc1562db}</Project>
+    <ProjectReference Include="..\Forum.Domain\Forum.Domain.csproj">
+      <Project>{5a4055c3-89bc-4149-8a6d-06ce985080c9}</Project>
       <Name>Forum.Domain</Name>
     </ProjectReference>
   </ItemGroup>
