--- a/Forum.Domain.Repositories.Dapper/Forum.Domain.Repositories.Dapper.csproj
+++ b/Forum.Domain.Repositories.Dapper/Forum.Domain.Repositories.Dapper.csproj
@@ -45,11 +45,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountRegistrationInfoRepository.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Forum.Domain\Forum.Domain.csproj">
+      <Project>{5a4055c3-89bc-4149-8a6d-06ce985080c9}</Project>
+      <Name>Forum.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
