--- a/Forum.Domain.Repositories.Dapper/Forum.Domain.Repositories.Dapper.csproj
+++ b/Forum.Domain.Repositories.Dapper/Forum.Domain.Repositories.Dapper.csproj
@@ -36,7 +36,7 @@
       <HintPath>..\packages\ecommon.1.0.8\lib\net40\ECommon.dll</HintPath>
     </Reference>
     <Reference Include="ENode">
-      <HintPath>..\packages\enode.2.1.3\lib\net40\ENode.dll</HintPath>
+      <HintPath>..\packages\enode.2.1.5\lib\net40\ENode.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountRegistrationInfoRepository.cs" />
+    <Compile Include="RegistrationRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
