--- a/Forum.QueryServices/Forum.QueryServices.csproj
+++ b/Forum.QueryServices/Forum.QueryServices.csproj
@@ -36,7 +36,7 @@
       <HintPath>..\packages\ecommon.1.0.8\lib\net40\ECommon.dll</HintPath>
     </Reference>
     <Reference Include="ENode">
-      <HintPath>..\packages\enode.2.1.3\lib\net40\ENode.dll</HintPath>
+      <HintPath>..\packages\enode.2.1.5\lib\net40\ENode.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -56,6 +56,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Forum.Domain\Forum.Domain.csproj">
+      <Project>{5a4055c3-89bc-4149-8a6d-06ce985080c9}</Project>
+      <Name>Forum.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
