--- a/Forum.Denormalizers.Dapper/Forum.Denormalizers.Dapper.csproj
+++ b/Forum.Denormalizers.Dapper/Forum.Denormalizers.Dapper.csproj
@@ -39,6 +39,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\enode.2.1.5\lib\net40\ENode.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
