--- a/Forum.Domain.Repositories.Dapper/Forum.Domain.Repositories.Dapper.csproj
+++ b/Forum.Domain.Repositories.Dapper/Forum.Domain.Repositories.Dapper.csproj
@@ -38,6 +38,7 @@
     <Reference Include="ENode">
       <HintPath>..\packages\enode.2.1.5\lib\net40\ENode.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
