--- a/Forum.QueryServices.Dapper/Forum.QueryServices.Dapper.csproj
+++ b/Forum.QueryServices.Dapper/Forum.QueryServices.Dapper.csproj
@@ -38,6 +38,7 @@
     <Reference Include="ENode">
       <HintPath>..\packages\enode.2.1.5\lib\net40\ENode.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
