--- a/Forum.Domain.Tests/Forum.Domain.Tests.csproj
+++ b/Forum.Domain.Tests/Forum.Domain.Tests.csproj
@@ -33,25 +33,34 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Autofac">
-      <HintPath>..\packages\Autofac.3.1.1\lib\net40\Autofac.dll</HintPath>
+      <HintPath>..\packages\Autofac.3.3.1\lib\net40\Autofac.dll</HintPath>
     </Reference>
     <Reference Include="ECommon">
       <HintPath>..\packages\ecommon.1.0.8\lib\net40\ECommon.dll</HintPath>
+    </Reference>
+    <Reference Include="ECommon.Autofac">
+      <HintPath>..\packages\ecommon.autofac.1.0.8\lib\net40\ECommon.Autofac.dll</HintPath>
+    </Reference>
+    <Reference Include="ECommon.JsonNet">
+      <HintPath>..\packages\ecommon.jsonnet.1.0.8\lib\net40\ECommon.JsonNet.dll</HintPath>
+    </Reference>
+    <Reference Include="ECommon.Log4Net">
+      <HintPath>..\packages\ecommon.log4net.1.0.8\lib\net40\ECommon.Log4Net.dll</HintPath>
     </Reference>
     <Reference Include="ENode">
       <HintPath>..\packages\enode.2.1.5\lib\net40\ENode.dll</HintPath>
     </Reference>
     <Reference Include="ENode.EQueue">
-      <HintPath>..\packages\enode.equeue.1.1.6\lib\net40\ENode.EQueue.dll</HintPath>
+      <HintPath>..\packages\enode.equeue.1.1.8\lib\net40\ENode.EQueue.dll</HintPath>
     </Reference>
     <Reference Include="EQueue">
       <HintPath>..\packages\equeue.1.0.9\lib\net40\EQueue.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
-      <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
+      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
@@ -63,15 +72,56 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountTest.cs" />
+    <Compile Include="ENodeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stubs\AccountRegistrationInfoRepository.cs" />
+    <Compile Include="Providers\AggregateRootTypeCodeProvider.cs" />
+    <Compile Include="Providers\CommandTopicProvider.cs" />
+    <Compile Include="Providers\CommandTypeCodeProvider.cs" />
+    <Compile Include="Providers\EventHandlerTypeCodeProvider.cs" />
+    <Compile Include="Providers\EventTopicProvider.cs" />
+    <Compile Include="Providers\EventTypeCodeProvider.cs" />
     <Compile Include="TestBase.cs" />
-    <Compile Include="SectionTest.cs" />
-    <Compile Include="PostTest.cs" />
-    <Compile Include="ReplyTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Forum.CommandHandlers\Forum.CommandHandlers.csproj">
+      <Project>{985e2001-f607-44bf-a84b-31e9b7d89d0c}</Project>
+      <Name>Forum.CommandHandlers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Commands\Forum.Commands.csproj">
+      <Project>{7787ec6c-9cf3-401c-803a-b4da2b0ca9ef}</Project>
+      <Name>Forum.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Denormalizers.Dapper\Forum.Denormalizers.Dapper.csproj">
+      <Project>{433dd072-0748-4440-ba1b-4a0d6e507d3b}</Project>
+      <Name>Forum.Denormalizers.Dapper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Domain.Repositories.Dapper\Forum.Domain.Repositories.Dapper.csproj">
+      <Project>{b229fffe-0f61-4ec7-88a5-5e76197f476c}</Project>
+      <Name>Forum.Domain.Repositories.Dapper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Domain\Forum.Domain.csproj">
+      <Project>{5a4055c3-89bc-4149-8a6d-06ce985080c9}</Project>
+      <Name>Forum.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.EventSynchronizers\Forum.EventSynchronizers.csproj">
+      <Project>{ccfc7288-0d7f-4028-aed5-fa8ddbe84339}</Project>
+      <Name>Forum.EventSynchronizers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Infrastructure\Forum.Infrastructure.csproj">
+      <Project>{86985782-8588-48da-81ab-ffd3b855c73c}</Project>
+      <Name>Forum.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.QueryServices.Dapper\Forum.QueryServices.Dapper.csproj">
+      <Project>{228e2c43-cd92-4b49-817d-3fbfbb9c50c4}</Project>
+      <Name>Forum.QueryServices.Dapper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.QueryServices\Forum.QueryServices.csproj">
+      <Project>{a0bc4ae4-1cab-4cbf-9bfb-5365f04c60ce}</Project>
+      <Name>Forum.QueryServices</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
