alter package version.

--- a/Forum.Api/packages.config
+++ b/Forum.Api/packages.config
@@ -3,11 +3,12 @@
   <package id="Autofac" version="3.3.1" targetFramework="net40" />
   <package id="Autofac.WebApi" version="3.1.0" targetFramework="net40" />
   <package id="ecommon" version="1.0.8" targetFramework="net40" />
-  <package id="ecommon.autofac" version="1.0.8" targetFramework="net40" />
+  <package id="ecommon.autofac" version="1.0.9" targetFramework="net40" />
   <package id="ecommon.jsonnet" version="1.0.8" targetFramework="net40" />
   <package id="ecommon.log4net" version="1.0.8" targetFramework="net40" />
-  <package id="enode" version="2.1.5" targetFramework="net40" />
+  <package id="enode" version="2.1.6" targetFramework="net40" />
   <package id="enode.equeue" version="1.1.6" targetFramework="net40" />
+  <package id="enode.equeue" version="1.1.9" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="EntityFramework.zh-Hans" version="5.0.0" targetFramework="net40" />
   <package id="equeue" version="1.0.9" targetFramework="net40" />
