--- a/Forum.Web/packages.config
+++ b/Forum.Web/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.1.1" targetFramework="net40" />
+  <package id="Autofac" version="3.3.1" targetFramework="net40" />
   <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net40" />
   <package id="DotNetOpenAuth.AspNet" version="4.0.3.12153" targetFramework="net40" />
   <package id="DotNetOpenAuth.Core" version="4.0.3.12153" targetFramework="net40" />
@@ -9,9 +10,12 @@
   <package id="DotNetOpenAuth.OpenId.Core" version="4.0.3.12153" targetFramework="net40" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.0.3.12153" targetFramework="net40" />
   <package id="ecommon" version="1.0.8" targetFramework="net40" />
-  <package id="enode" version="2.1.5" targetFramework="net40" />
+  <package id="ecommon.autofac" version="1.0.9" targetFramework="net40" />
+  <package id="enode" version="2.1.6" targetFramework="net40" />
+  <package id="enode.equeue" version="1.1.9" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="EntityFramework.zh-Hans" version="5.0.0" targetFramework="net40" />
+  <package id="equeue" version="1.0.9" targetFramework="net40" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
