--- a/Forum.Api/Forum.Api.csproj
+++ b/Forum.Api/Forum.Api.csproj
@@ -41,7 +41,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac">
+    <Reference Include="Autofac, Version=3.3.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Autofac.3.3.1\lib\net40\Autofac.dll</HintPath>
     </Reference>
     <Reference Include="Autofac.Integration.WebApi, Version=3.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
@@ -52,8 +53,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ecommon.1.0.8\lib\net40\ECommon.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon.Autofac">
-      <HintPath>..\packages\ecommon.autofac.1.0.8\lib\net40\ECommon.Autofac.dll</HintPath>
+    <Reference Include="ECommon.Autofac, Version=1.0.9.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ecommon.autofac.1.0.9\lib\net40\ECommon.Autofac.dll</HintPath>
     </Reference>
     <Reference Include="ECommon.JsonNet">
       <HintPath>..\packages\ecommon.jsonnet.1.0.8\lib\net40\ECommon.JsonNet.dll</HintPath>
@@ -63,10 +65,11 @@
     </Reference>
     <Reference Include="ENode, Version=2.1.5.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\enode.2.1.5\lib\net40\ENode.dll</HintPath>
+      <HintPath>..\packages\enode.2.1.6\lib\net40\ENode.dll</HintPath>
     </Reference>
-    <Reference Include="ENode.EQueue">
-      <HintPath>..\packages\enode.equeue.1.1.6\lib\net40\ENode.EQueue.dll</HintPath>
+    <Reference Include="ENode.EQueue, Version=1.1.8.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\enode.equeue.1.1.9\lib\net40\ENode.EQueue.dll</HintPath>
     </Reference>
     <Reference Include="EQueue">
       <HintPath>..\packages\equeue.1.0.9\lib\net40\EQueue.dll</HintPath>
