--- a/Forum.Web/Forum.Web.csproj
+++ b/Forum.Web/Forum.Web.csproj
@@ -41,9 +41,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=3.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+    <Reference Include="Autofac, Version=3.3.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Autofac.3.1.1\lib\net40\Autofac.dll</HintPath>
+      <HintPath>..\packages\Autofac.3.3.1\lib\net40\Autofac.dll</HintPath>
     </Reference>
     <Reference Include="Autofac.Integration.Mvc">
       <HintPath>..\packages\Autofac.Mvc4.3.1.0\lib\net40\Autofac.Integration.Mvc.dll</HintPath>
@@ -52,9 +52,18 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ecommon.1.0.8\lib\net40\ECommon.dll</HintPath>
     </Reference>
+    <Reference Include="ECommon.Autofac">
+      <HintPath>..\packages\ecommon.autofac.1.0.9\lib\net40\ECommon.Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="ENode, Version=2.1.5.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\enode.2.1.5\lib\net40\ENode.dll</HintPath>
+      <HintPath>..\packages\enode.2.1.6\lib\net40\ENode.dll</HintPath>
+    </Reference>
+    <Reference Include="ENode.EQueue">
+      <HintPath>..\packages\enode.equeue.1.1.9\lib\net40\ENode.EQueue.dll</HintPath>
+    </Reference>
+    <Reference Include="EQueue">
+      <HintPath>..\packages\equeue.1.0.9\lib\net40\EQueue.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
